--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nique tes morts</title>
+    <title>Nique t morts</title>
     <style>
         .title{
             font-size: 50px;
@@ -23,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <script>
             var typed = new Typed('.typed', {
-                strings: ['Vas niquer T morts !'],
+                strings: ['Vas niquer t morts !'],
                 typeSpeed: 50,
                 backSpeed: 15,
                 smartBackspace: true,
